--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,6 +5,9 @@ import Navigation from "./Navigation.astro"
 <header>
     <div class="header-content">
 	    <div class="header-title">The Art of Gaming</div>
+        <div class="header-image">
+            <img src="../../quick_banner.png">
+        </div>
 	    <nav>
             <Hamburger/>
             <Navigation/>
