--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -32,7 +32,7 @@ const pageTitle = "About Me";
 	close to my heart, I don't show my hand quite as much and now create to give others a place 
 	where they can explore topics or experience emotions in a safe way.</p>
 	<p>My favorite genres to create are probably mystery and horror, but I like making silly little
-	things too. For now, all the games I've ever made public are available on my itch.io, but due
+	things too. For now, all the games I've made that are currently public are on my itch.io, but due
 	to ephemerality of platforms (the fact that they won't be around forever) I'll be adding newer 
 	stuff here as well, when possible. (My host is quite generous but some things will just be too 
 	big to handle).</p>
