--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,18 +8,15 @@ const pageTitle = "Home Page";
 <PersonalBaseLayout pageTitle={pageTitle}>
 		<h1>Welcome to my cozy spot on the internet!</h1>
         <p>
-			This is the fun, personal side of my site where I can collect the projects I care about in one place, give updates and my personal thoughts on things. It's also a good place to collect all the different hobbies I have and hopefully make friends and find places of inspiration in a less mind-numbing way than social media and youtube. I'm taking my time on this site and kind of doing a learning in public type thing by just uploading whatever I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless.
+			This is the fun, personal side of my site where I can collect the projects I care about 
+			in one place, give updates and my personal thoughts on things. It's also a good place to 
+			collect all the different hobbies I have and hopefully make friends and find places of 
+			inspiration in a less mind-numbing way than social media and youtube. I'm taking my time 
+			on this site and kind of doing a learning in public type thing by just uploading whatever 
+			I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless.
         </p>
-		<div class="divider" style="padding-left:4em"></div>
-		<h1> Sneak Peek </h1>
-		<h5> From my horror draft: </h5>
-		<p>"POLLY - That’s not water! <br>
-			While the bathtub fills, steam begins fogging up the room.<br>
-			POLLY - Um, excuse me something’s wrong with your water!<br>
-			Polly goes to the door and tries to open it, but the door is locked.<br>
-			POLLY - Does it only unlock on the outside?<br>
-			The steam gets thicker."
-		</p>
+		
+
 		<script>
 			import '../scripts/menu.js'
 		</script>
