--- a/src/components/Collection Gallery.astro
+++ b/src/components/Collection Gallery.astro
@@ -3,16 +3,18 @@ interface Props {
 	title: string;
 	url: string;
 	image: string;
+	pubDate: Date;
 }
 
 const { url, title, image } = Astro.props;
 ---
-<div style="padding-left:0; padding-right:0; min-height:0; overflow:hidden; border-radius:5px">
+<div style="padding-left:0; padding-right:0; min-height:24rem; overflow:hidden; border-radius:5px">
 	<li class="link-card">
 		<a href={url}>
-			<img class="card-img" src={image} alt="project image"></img>
+			<img class="card-img" src={image} alt="project image">
+			<h2>{title}</h2>
 		</a>
-		<h2>{title}</h2>
+		
 	</li>
 	
 </div>
@@ -20,19 +22,17 @@ const { url, title, image } = Astro.props;
 	.link-card {
 		display:inline-grid;
 		padding-top: 0em;
-		overflow:hidden;
-		min-height:0;
 		width:calc(19rem);
 		border-radius: 5px;
 		background-position: 70%;
 		opacity: .7;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		text-overflow:hidden;
+		height: 27em;
 	}
 	.link-card > a {
 		text-decoration: none;
-		overflow:hidden;
-		min-height:0;
+		padding-bottom: 10rem;
 		display:grid;
 		line-height: 1.4;
 		padding-top: calc(1rem - 1px);
@@ -40,13 +40,14 @@ const { url, title, image } = Astro.props;
 		color: white;
 		opacity: 0.8;
 		text-overflow:hidden;
+		height: 10em;
 	}
 	h2 {
 		text-align: center;
 		font-size: 1.25rem;
 		color: rgb(228, 157, 126);
 		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		margin-top:-.75em;
+		margin-top:1em;
 		margin-bottom:.25em;
 	}
 	p {
@@ -55,6 +56,13 @@ const { url, title, image } = Astro.props;
 		min-height:0;
 		margin-top: 0;
 		margin-bottom: 0;
+	}
+	ul 
+	{
+		text-align: center;
+		margin:0;
+		padding:0;
+		padding-top:1em;
 	}
 	.link-card:is(:hover, :focus-within) {
 		background-position: 0;
